# ESVO2

./: .gitmodules  README.md
dv_ros_msgs/: CMakeLists.txt  package.xml
esvo2_core/: CMakeLists.txt  esvo2_mvstereo.rviz  esvo2_system.rviz  esvo2_system_DSEC.rviz  package.xml
esvo2_core/cfg/mapping/: mapping_dsec_AA.yaml  mapping_dvx_AA_mapping.yaml  mapping_dvx_AA_tracking.yaml  mapping_evk4_AA.yaml  mapping_rpg_AA.yaml  mapping_tum_AA.yaml  mapping_upenn_AA.yaml  mapping_vector_AA.yaml
esvo2_core/cfg/tracking/: tracking_dsec_AA.yaml  tracking_dvx_AA_mapping.yaml  tracking_dvx_AA_tracking.yaml  tracking_evk4_AA.yaml  tracking_online_AA.yaml  tracking_rpg_AA.yaml  tracking_tum_AA.yaml  tracking_upenn_AA.yaml  tracking_vector_AA.yaml
esvo2_core/include/esvo2_core/: esvo2_Mapping.h  esvo2_Tracking.h
esvo2_core/include/esvo2_core/container/: EventMatchPair.h  TimeSurfaceObservation.h
esvo2_core/include/esvo2_core/core/: BackendOptimization.h  EventBM.h  RegProblemLM.h  RegProblemSolverLM.h
esvo2_core/include/esvo2_core/factor/: imu_factor.h  pose_local_parameterization.h
esvo2_core/include/esvo2_core/tools/: SystemStatus.h  Visualization.h  params_helper.h  utils.h
esvo2_core/launch/system/: system_dsec.launch.py  system_dvx_mapping.launch.py  system_dvx_tracking.launch.py  system_evk4.launch.py  system_rpg.launch.py  system_tum_DoF.launch.py  system_tum_desk.launch.py  system_upenn.launch.py  system_vector.launch.py
esvo2_core/src/: esvo2_Mapping.cpp  esvo2_MappingNode.cpp  esvo2_Tracking.cpp  esvo2_TrackingNode.cpp
esvo2_core/src/container/: CameraSystem.cpp  EventPoint.cpp
esvo2_core/src/core/: BackendOptimization.cpp  EventBM.cpp  RegProblemSolverLM.cpp
esvo2_core/src/tools/: Visualization.cpp
events_repacking_tool/: CMakeLists.txt  package.xml
events_repacking_tool/msg/: VBaBg.msg
events_repacking_tool/src/: EventMessageEditor.cpp
image_representation/: CMakeLists.txt  package.xml
image_representation/cfg/: image_representation_fast.yaml  image_representation_fast_40hz.yaml  image_representation_fast_r.yaml  image_representation_fast_r_40hz.yaml  image_representation_slow.yaml  image_representation_slow_r.yaml
image_representation/include/image_representation/: ImageRepresentation.h
image_representation/launch/: image_representation.launch.py
image_representation/src/: ImageRepresentation.cpp  ImageRepresentation_node.cpp
