<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>esvo2_core</name>
  <version>0.0.0</version>
  <description>The esvo2_core package.</description>

  <maintainer email="eeyzhou@ust.hk">Yi Zhou</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>dvs_msgs</depend>
  <depend>events_repacking_tool</depend>
  <depend>cv_bridge</depend>
  <depend>minkindr</depend>
  <depend>minkindr_conversions</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>message_filters</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
