<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>image_representation</name>
  <version>0.0.0</version>
  <description>The image_representation package.</description>
  <maintainer email="eeyzhou@ust.hk">Yi Zhou</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>eigen</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>builtin_interfaces</depend>
  <depend>dvs_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
